0.34 2022-07-17
- improve LAPACK detection on Linux - thanks @KJ7LNW

0.33 2022-07-14
- test, fix mtoeplitz (#16) - thanks @jjatria for report

0.32 2022-05-06
- fix to work again with MacOS by stripping unknown libraries

0.31 2022-05-06
- fix to work with Strawberry Perl 5.28's LAPACK (#14) - thanks @aero for report

0.30 2022-05-02
- fix mpow to work with power 0 - https://perlmonks.org/?node_id=1229396

0.29 2022-04-10
- fix mnull reporting different solution on Windows - thanks @aero for CPANTesters report
- remove PDL::Complex method aliases now in PDL 2.078

0.28 2022-04-09
- allow alternative values for complex U in mschur (#12) - thanks @sebastic for report
- use C macro "FORTRAN()" to hide whether need _ on end of symbols
- use [t] Pars instead of malloc for fixed-size workspace

0.27 2022-04-06
- now 64-bit safe
- t, issym, tritosym method for complex now defaults to not conjugate
- various memory-management bugs fixed
- PDL::Complex::tricpy now alias to ctricpy
- provide override xerbla_ to not insta-exit on bad input
  (works with OpenBLAS and reference LAPACK, not ATLAS)
- msolve etc now handle native-complex (#10) - thanks @guillepo for report

0.26 2021-11-14
- Reversible now called TwoWay

0.25 2021-10-02
- separate out {Real,Complex,Trans}/selectfunc.c
- opt in to upcoming PDL multi-C feature

0.24 2021-10-01
- change $PRIV() to $COMP()

0.23 2021-09-25
- fix mdet acting on complex matrices - thanks @wlmb

0.22 2021-09-15
- switch from $PRIV(__x_size) to $SIZE(x)

0.21 2021-08-12
- fix test bug under at least 5.14.1 that had test compare complex numbers

0.20 2021-05-30
- also export mpinv
- fix RedoDimsCode for native-complex
- fix matrix-multiplication overload to work with native-complex

0.19 2021-05-24
- change to PDL 2.047 with native complex i()

0.18 2021-05-03
- stop loading PDL::Complex and overriding PDL:: functions

0.17 2021-04-01
- handle native complex data

0.16 2021-03-23
- fix pp_setversion calls now that preserves string
