@@ -1,3 +1,5 @@
+- fix `$real x $native_complex` (#18) - thanks @KJ7LNW for report
+
 0.34 2022-07-17
 - improve LAPACK detection on Linux - thanks @KJ7LNW
 
